# KappaData

./: .gitignore  NOTES.md  README.md  TODO.md  color_histogram_test.py  main_benchmark.py  main_benchmark_batchsampler.py  main_calculate_mean_and_std.py  main_create_audioset_weights.py  main_create_mock_dataset.py  main_create_zipped_imagefolder.py  main_create_zips.py  main_inspect_augmentation.py  main_unzip_imagefolder.py  main_visualize_ade20k_transform.py  main_visualize_augmentation.py  main_visualize_augmentation_single.py  main_visualize_augmentation_single2.py  main_visualize_augmentations_increasing.py  main_visualize_dataset_imgsize.py  main_visualize_interpolation.py  main_visualize_jigsaw.py  main_visualize_mae_schematic.py  main_visualize_masked_image.py  main_visualize_specaugment.py  main_visualize_transform.py  main_visualize_transform_schedule.py  pyproject.toml  requirements.txt  requirements_tests.txt  scheduled_transform_scratchpad.py  scratchpad_ijepa.py  setup.cfg
docs/: conf.py  index.rst
kappadata/: __init__.py  error_messages.py  factory.py  functional.py  utils.py
test_unit_long/: test_deterministic_byolaug.py  test_stochastic_transform_seed.py
tests_external_sources/: dinov2.py  ijepa.py
tests_integration/: test_all_wrapper_types.py  test_all_wrappers.py  test_balanced_class_group_sampler.py  test_cutmix_mixup_combination.py  test_factory.py  test_get_wrappers_of_type.py  test_getitem_from_ctx.py  test_has_wrapper.py  test_has_wrapper_type.py  test_interleaved_samplers.py  test_maefinetune_pipeline.py  test_maefinetune_transform.py  (+3 more)
(+415 files in other folders)
