[metadata]
# version is set by CI/CD pipeline
name = kappadata
description = pytorch dataset wrappers for in-memory caching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/KappaData
project_urls =
    Source Code = https://github.com/BenediktAlkin/KappaData
    Bug Tracker = https://github.com/BenediktAlkin/KappaData/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch
    torchaudio
    torchvision
    Pillow
    numpy
    einops
    joblib
    timm
    kappaschedules


[options.packages.find]
exclude =
    tests_integration*
    tests_unit*
    tests_util*
